Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.2.5 =
* Fixed: CoursePress theme navigation restored in responsive/mobile views.
* Improved some responsive elements of the CoursePress theme.

= 1.2.2.4 =
* Added integration with "Terms of Service" plugin http://premium.wpmudev.org/project/terms-of-service/
* Improved CoursePress for multi-site.
* Improved CoursePress security for multi-site.
* Improved UX for MarketPress in the admin (MarketPress activation and installation menu, links and messages shown to users who don't have required permissions)
* Future integration with Ultimate Facebook plugin to better promote courses on Facebook using OpenGraph data. (Currently works with CoursePress theme, but requires future Ultimate Facebook 2.7.8+ for all other themes.)
* Fixed: Instructors can now successfully create own courses (provided capability is set in CoursePress settings).

= 1.2.2.3=
* Changed the method of activation and installation of MarketPress
* Resolved issue with incorrect SKU being returned in checkout process.

= 1.2.2.2=
* Fixed issue with not showing HTML tags in excerpt
* Resolved issues with UTF-8 characters in filename in the TCPDF library
* Fixed up issue with translation files not working properly.
  - Updated languages files.
  - Updated cp-en_GB translation (Enrollment vs Enrolment).
  - Placing translations in /coursepress/languages now works correctly.
* Added additional hooks for developers in class.course.unit.php and class.course.unit.module.php.
* Fixed issue with some shortcodes displaying content out of place on a page.

= 1.2.2.1=
* Fixed issues caused e-newsletter plugin to show blank page in admin
* Fixed possible issues with MarketPress update
* Fixed issues with clearing cookie data in course checkout message
* Updated translation files

= 1.2.2.0=